# pyportfolio

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
pyportfolio/: __init__.py  columns.py  logging_setup.py  transaction_manager.py
pyportfolio/calculators/: average_price_calculator.py  base_calculator.py  dividend_calculator.py  fifo_calculator.py  irpf_earnings_calculator.py  irpf_moveable_capital_income_calculator.py  loss_carry_forward_calculator.py
pyportfolio/config/: logging_config.yaml
pyportfolio/config/studio/: portfolio_env.yaml
pyportfolio/scripts/powerquery/: pq_get_fifo_irpf_data.py  pq_get_irpf_report.py
pyportfolio/studio/: portfolio_studio.py
pyportfolio/studio/students/: general_irpf_student.py  irpf_capital_gain_loss_student.py  irpf_capital_gains_losses_student.py  irpf_moveable_capital_income_student.py
scripts/powerquery/: pq_get_fifo_irpf_data.py
test/: conftest.py  test_transaction_manager.py
test/calculators/: test_avarage_calculator.py  test_dividend_calculator.py  test_fifo_calculator.py  test_irpf_earnings_calculator.py  test_loss_carry_forward_calculator.py
test/scripts/powerquery/: test_pq_get_fifo_irpf_data.py  test_pq_get_irpf_report.py
test/studio/: test_portfolio_studio.py
